# py4ai-data

./: .buildinfo  .gitattributes  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: continous-delivery.yml  continous-integration.yml  github-page-build-and-deploy.yml
_sources/api/: modules.rst.txt  py4ai.data.datasets.rst.txt  py4ai.data.exceptions.rst.txt  py4ai.data.layer.common.criteria.rst.txt  py4ai.data.layer.common.repository.rst.txt  py4ai.data.layer.common.rst.txt  py4ai.data.layer.common.serialiazer.rst.txt  py4ai.data.layer.fs.criteria.rst.txt  py4ai.data.layer.fs.repository.rst.txt  py4ai.data.layer.fs.rst.txt  py4ai.data.layer.fs.serializer.rst.txt  py4ai.data.layer.fs.tables.rst.txt  py4ai.data.layer.mongo.criteria.rst.txt  py4ai.data.layer.mongo.repository.rst.txt  py4ai.data.layer.mongo.rst.txt  py4ai.data.layer.mongo.serializer.rst.txt  py4ai.data.layer.pandas.criteria.rst.txt  py4ai.data.layer.pandas.repository.rst.txt  py4ai.data.layer.pandas.rst.txt  py4ai.data.layer.rst.txt  py4ai.data.layer.sqlalchemy.criteria.rst.txt  py4ai.data.layer.sqlalchemy.repository.rst.txt  py4ai.data.layer.sqlalchemy.rst.txt  py4ai.data.layer.sqlalchemy.serializer.rst.txt  py4ai.data.model.core.rst.txt  py4ai.data.model.ml.rst.txt  py4ai.data.model.rst.txt  py4ai.data.model.text.rst.txt  py4ai.data.rst.txt  py4ai.rst.txt
api/: modules.html  py4ai.data.datasets.html  py4ai.data.exceptions.html  py4ai.data.html  py4ai.data.layer.common.criteria.html  py4ai.data.layer.common.html  py4ai.data.layer.common.repository.html  py4ai.data.layer.common.serialiazer.html  py4ai.data.layer.fs.criteria.html  py4ai.data.layer.fs.html  py4ai.data.layer.fs.repository.html  py4ai.data.layer.fs.serializer.html  py4ai.data.layer.fs.tables.html  py4ai.data.layer.html  py4ai.data.layer.mongo.criteria.html  py4ai.data.layer.mongo.html  py4ai.data.layer.mongo.repository.html  py4ai.data.layer.mongo.serializer.html  py4ai.data.layer.pandas.criteria.html  py4ai.data.layer.pandas.html  py4ai.data.layer.pandas.repository.html  py4ai.data.layer.sqlalchemy.criteria.html  py4ai.data.layer.sqlalchemy.html  py4ai.data.layer.sqlalchemy.repository.html  py4ai.data.layer.sqlalchemy.serializer.html  py4ai.data.model.core.html  py4ai.data.model.html  py4ai.data.model.ml.html  py4ai.data.model.text.html  py4ai.html
intro/: readme.html
py4ai/data/: __init__.py  _version.py
py4ai/data/datasets/: __init__.py
py4ai/data/layer/: __init__.py
py4ai/data/layer/common/: __init__.py  criteria.py  repository.py  serialiazer.py
py4ai/data/layer/fs/: __init__.py  criteria.py  (+3 more)
py4ai/data/model/: __init__.py  core.py  ml.py  text.py
requirements/: requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt
sphinx/source/: conf.py  index.rst
sphinx/source/userguide/: index.rst
tests/: __init__.py  test_data_datasets.py  test_data_layer_pandas_archivers.py  test_data_layer_pandas_dao.py  test_data_layer_pandas_databases.py  test_data_model_core.py  test_data_model_iterables.py  test_data_model_ml.py  test_data_model_text.py  test_mongo_bindings.py
tests/data/layer/: base.py
tests/data/model/: test_core.py  test_iterables.py  test_ml.py  test_text.py
tests/resources/data/: donations.csv  donors.csv  donors.dummy.csv  logging.yml
userguide/: index.html
(+23 files in other folders)
